imgs now are video

--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
             <!-- Projects start -->
             <section class="prj-item">
                 <section class="prj-img">
-                    <img id="gif" src="https://media.giphy.com/media/dx5LodWhFMWNlKSTl8/giphy.gif" alt=""
-                        loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" /></video>
+                </section>
+
+                <section class="prj-info">
+                    <h4 class="prj-title">purpl3 tr33s</h4>
+                    <p class="date-length">2O24</p>
+                </section>
+            </section>
+
+            <section class="prj-item">
+                <section class="prj-img">
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/flyman-music.webm" type="video/webm" loading="lazy" /></video>
                 </section>
 
                 <section class="prj-info">
@@ -61,8 +73,8 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <video id="prj-vid" muted playsinline loop>
-                        <source src="assets/videos/lostatsea_1.mp4" type="video/mp4" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/little-dreamr.webm" type="video/mp4" />
                     </video>
                 </section>
 
@@ -79,7 +91,9 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif" alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/space-man.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -97,8 +111,9 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmNpeWxreTA0YzZ5cjQ3Nm5jajBtMTA4Nm9nYWUxbWc1cnNpY2V5bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/W2Q6lbYWpVMCIchnSm/giphy-downsized-large.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/el-santo_1.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -116,8 +131,9 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3JiODZrdjJyMDNuZnhtbGdlOGVpYzBneGhuYTcyMnNldjUxc2ljbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wzDE7e0XfWmEKcFkhY/source.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/wavyboxy.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -130,12 +146,14 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif" alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/frosty.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
                     <h4 class="prj-title">
-                        <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Frosty Silent Hour</a>
+                        <a href="https://youtu.be/lq0bo3wxtUY?si=L8PuXvIZswJrlcnW" target="_blank" class="link">Frosty Silent Hour</a>
                     </h4>
                     <p class="date-length">(1 hr) 2O23</p>
                 </section>
@@ -143,8 +161,9 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFoOGp4OHRmaDdobXN0aGY0b3o2cXJ1djNnZnRoNGIzdHF6N2Y0ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9CERvU2qaFr55t7E79/source.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/bloom.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -155,8 +174,22 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzJ6cWJ5cTlma3F3ZWw4eWphZ2k0dmhzOXVzNXlxa29mNThydHhwYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/bcdoeVKUkpxfBjlxai/source.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/colins.webm" type="video/mp4" />
+                    </video>
+                </section>
+
+                <section class="prj-info">
+                    <h4 class="prj-title">clns</h4>
+                    <p class="date-length">2O23</p>
+                </section>
+            </section>
+
+            <section class="prj-item">
+                <section class="prj-img">
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/black-rivr.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -167,8 +200,22 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmp0bmZ2c3E4cWwzb3hwM2FpN2NoMWx5cThzeXBkY2g4enc0bG5mMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CXhLKMZB6BOWZ4X6Os/giphy.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/rainbow-road.webm" type="video/mp4" />
+                    </video>
+                </section>
+
+                <section class="prj-info">
+                    <h4 class="prj-title">rainbow road</h4>
+                    <p class="date-length">2O23</p>
+                </section>
+            </section>
+
+            <section class="prj-item">
+                <section class="prj-img">
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/clementines.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -179,8 +226,9 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWNvcG9jMG1mZ3QydDh5bmlnZmM4eDlmb2Z1bTZlb2IzZWYzMDVoYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mSitnIleX5r01MsQgN/giphy.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/gaming.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -191,21 +239,35 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHE5eGt0d2lsaGVpeXdmbXM3bXVlcmFibzhxeG5wdG1wdmszamI1ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/evT7QuK6QLxMq6lgif/giphy-downsized-large.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/butterfly.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
-                    <h4 class="prj-title">colorful spiriling</h4>
+                    <h4 class="prj-title">buttrfly</h4>
                     <p class="date-length">2O23</p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img id="gif"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGoxdHR2aTU5aDNxM3V4Mmp3bzFyd2RhcGNraGs5NHV5c3AxNjNnYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/POMUkJVdedbJOSjxdq/giphy-downsized-large.gif"
-                        alt="" loading="lazy" />
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/spiral-wv.webm" type="video/mp4" />
+                    </video>
+                </section>
+
+                <section class="prj-info">
+                    <h4 class="prj-title">spiriln</h4>
+                    <p class="date-length">2O23</p>
+                </section>
+            </section>
+
+            <section class="prj-item">
+                <section class="prj-img">
+                    <video autoplay muted playsinline loop>
+                        <source src="assets/videos/webm/glitchy.webm" type="video/mp4" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -225,11 +287,11 @@
     <script>
 
         let loadMoreBtn = document.querySelector('#load-more');
-        let currentItem = 3;
+        let currentItem = 6;
 
         loadMoreBtn.onclick = () => {
-            let boxes = [...document.querySelectorAll('.prj-grid .prj-item')];
-            for (var i = currentItem; i < currentItem + 3; i++) {
+            let boxes = [...document.querySelectorAll('.prj-item')];
+            for (var i = currentItem; i < currentItem + 3 && i < boxes.length; i++) {
                 boxes[i].style.display = 'inline-block';
             }
             currentItem += 3;
@@ -240,21 +302,21 @@
     
         };
 
-        document.addEventListener("DOMContentLoaded", function() {
-            const videoContainer = document.querySelector(".prj-img");
-            const video = document.getElementById("prj-vid");
+        // document.addEventListener("DOMContentLoaded", function() {
+        //     const videoContainer = document.querySelector("#prj1");
+        //     const video = document.getElementById("prj-vid");
 
-            videoContainer.addEventListener("mouseenter", function() {
-                video.play();
-                videoContainer.classList.add("play");
-            });
+        //     videoContainer.addEventListener("mouseenter", function() {
+        //         video.play();
+        //         videoContainer.classList.add("play");
+        //     });
 
-            videoContainer.addEventListener("mouseleave", function() {
-                video.pause();
-                video.currentTime = 0;
-                videoContainer.classList.remove("play");
-            });
-        });
+        //     videoContainer.addEventListener("mouseleave", function() {
+        //         video.pause();
+        //         video.currentTime = 0;
+        //         videoContainer.classList.remove("play");
+        //     });
+        // });
 
     </script>
 </body>
