--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             <!-- Projects start -->
             <section class="prj-item">
                 <section class="prj-img">
-                    <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" /></video>
+                    <video class="video" src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" muted playsinline loop></video>
                 </section>
 
                 <section class="prj-info">
