--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <!-- Projects start -->
             <section class="prj-item">
                 <section class="prj-img">
-                    <video class="video" src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" muted playsinline loop></video>
+                    <video class="video" muted playsinline loop>
+                        <source src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
