--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
 <body>
     <section class="bg-img">
-        <img src="assets/images/scanned-img/flower-1.jpg" alt="">
+        <!-- <img src="assets/images/scanned-img/flower-1.jpg" alt=""> -->
+        <video autoplay muted playsinline loop>
+            <source src="assets/videos/fortune.mp4" type="video/mp4" />
+            <source src="assets/videos/fortune.webm" type="video/webm" />
+        </video>
     </section>
 
     <section id="base-grid">
