--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>art by fredo</title>
-    <link type="image/x-icon" sizes="16x16" rel="icon" href="assets/images/space-favicon.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="assets/images/space-favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Rubik+Mono+One&family=VT323&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
@@ -48,13 +48,15 @@
         </section>
 
 
+        <h3 class="contact-card" style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px;">*hover
+            over image for motion</h3>
 
         <section class="prj-grid">
             <!-- Projects start -->
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/purple-treees.webm" type="video/webm" loading="lazy" />
+                        <source src="assets/videos/webm/purple-treees.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -67,7 +69,8 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/flyman-music.webm" type="video/webm" loading="lazy" /></video>
+                        <source src="assets/videos/webm/flyman-music.webm" type="video/webm" />
+                    </video>
                 </section>
 
                 <section class="prj-info">
@@ -79,7 +82,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/little-dreamr.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/little-dreamr.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -97,7 +100,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/space-man.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/space-man.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -117,7 +120,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/el-santo_1.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/el-santo_1.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -137,7 +140,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/wavyboxy.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/wavyboxy.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -152,13 +155,14 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/frosty.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/frosty.webm" type="video/webm" />
                     </video>
                 </section>
 
                 <section class="prj-info">
                     <h4 class="prj-title">
-                        <a href="https://youtu.be/lq0bo3wxtUY?si=L8PuXvIZswJrlcnW" target="_blank" class="link">Frosty Silent Hour</a>
+                        <a href="https://youtu.be/lq0bo3wxtUY?si=L8PuXvIZswJrlcnW" target="_blank" class="link">Frosty
+                            Silent Hour</a>
                     </h4>
                     <p class="date-length">(1 hr) 2O23</p>
                 </section>
@@ -167,7 +171,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/bloom.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/bloom.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -180,7 +184,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/colins.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/colins.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -193,7 +197,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/black-rivr.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/black-rivr.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -206,7 +210,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/rainbow-road.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/rainbow-road.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -219,7 +223,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/clementines.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/clementines.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -232,7 +236,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/gaming.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/gaming.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -245,7 +249,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/butterfly.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/butterfly.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -258,7 +262,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/spiral-wv.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/spiral-wv.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -271,7 +275,7 @@
             <section class="prj-item">
                 <section class="prj-img">
                     <video class="video" muted playsinline loop>
-                        <source src="assets/videos/webm/glitchy.webm" type="video/mp4" />
+                        <source src="assets/videos/webm/glitchy.webm" type="video/webm" />
                     </video>
                 </section>
 
@@ -296,15 +300,15 @@
 
         loadMoreBtn.onclick = () => {
             let boxes = [...document.querySelectorAll('.prj-item')];
-            for (var i = currentItem; i < currentItem + 3 && i < boxes.length; i++) {
+            for (var i = currentItem; i < currentItem + 6 && i < boxes.length; i++) {
                 boxes[i].style.display = 'inline-block';
             }
-            currentItem += 3;
+            currentItem += 6;
 
             if (currentItem >= boxes.length) {
                 loadMoreBtn.style.display = 'none';
             }
-    
+
         };
 
         document.addEventListener('DOMContentLoaded', function () {
@@ -320,6 +324,16 @@
                 });
             });
         });
+
+        const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+
+        if (isSafari) {
+            const videos = document.querySelectorAll('.video');
+            videos.forEach(video => {
+                video.setAttribute('playsinline', '');
+                video.setAttribute('muted', '');
+            });
+        }
 
 
         // document.addEventListener("DOMContentLoaded", function() {
